<resources>
    <string name="app_name">CompanyFirebase</string>
    <string name="app_user">Usuario</string>
    <string name="app_pass">Password</string>
    <string name="app_btnInciar">Iniciar Sesion</string>
    <string name="app_send">Olvidaste tu contraseña</string>
    <string name="app_question">Si no tienes una cuenta registrate</string>
    <string name="app_register">Register</string>


    <string name="app_names">Name</string>
    <string name="app_lastname">Lastname</string>
    <string name="app_email">Email</string>
    <string name="app_pass_register">Password</string>
    <string name="app_pass_repeat">Repeat Password</string>
    <string name="app_register_button">Register</string>


    <string name="app_sendEmail">Email</string>
    <string name="app_send_button">Send</string>


</resources>
