<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity"
        android:padding="18dp">


    <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputEditText
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/txtuser"
                  android:hint="@string/app_user">

          </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/app_pass"
                android:id="@+id/txtpassword"
                android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>



    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/app_btnInciar"
            android:onClick="Ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/btnIniciar"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            android:id="@+id/progressBar"/>
    <TextView
            android:text="@string/app_send"
            android:onClick="forget"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txtSend"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/app_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:id="@+id/txtquestion"/>
    <TextView
            android:text="@string/app_register"
            android:onClick="registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="50dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txtregister"/>


</LinearLayout>